# MyLib

./: .gitignore  CMakeLists.txt  test.cpp
myLib/: string_utils.h  type_utils.h
myLib/alocators/: std_alignment.h
myLib/list_utils/: accumulate.h  apply.h  list_utils.h
myLib/math/: vec.h
myLib/tuple/: tuple.h
tests/: CMakeLists.txt  main-test.cpp  pch.h
tests/list_utils/: accumulate_test.cpp  apply_test.cpp
tests/math/: vec_test.cpp
